1573 - make top scroll visible after adding the handlers to ensure its visible only when working

--- a/common/styles/scss/app.scss
+++ b/common/styles/scss/app.scss
@@ -733,6 +733,7 @@ html {
     width: -webkit-fill-available;
     z-index: 2;
     top: 0;
+    display: none;
 }
 
 .top-scroll {
